Closed Bug 342536 Opened 18 years ago Closed 18 years ago

correcting word (with spell checker) causes other words to be unhighlighted

Categories

(Core :: Spelling checker, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: mscott)

References

Details

(Keywords: regression)

To reproduce:
- Type the following in a textarea: wone twoo
- Enable spellchecking on the textarea, both words get highlighted
- Right-click "wone" and select "one"."
Result, the other word becomes unhighlighted.

This is a regression from bug 312778, backing out the "remove the redundant DeleteSelection call" patch fixes it. 
I guess that patch just needs to be backed out, since it appears to be not that redundant at all.
Checking in extensions/spellcheck/src/mozInlineSpellChecker.cpp;
/cvsroot/mozilla/extensions/spellcheck/src/mozInlineSpellChecker.cpp,v  <--  moz
InlineSpellChecker.cpp
new revision: 1.17; previous revision: 1.16
done

Ok, backed out the offending patch.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.