Bug 342536 - Backing out _remove the redundant DeleteSelection call_ patch from bug 312778